--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,10 +1,10 @@
 .head {
   background-color: #6441A4;
+  max-width: 100%;
   margin: 0 auto;
   font-weight: bold;
   color: #ffffff;
-  width: 100%;
-  height: 6vh;
+  height: 60px;
   box-shadow: 0px 0px 5px #000000;
   padding-top: 18px;
   padding-left: 10px;
