--- a/src/styles/Sort.css
+++ b/src/styles/Sort.css
@@ -15,11 +15,11 @@ select {
   outline-color: #6441A4;
 }
 
-.hidden {
-  visibility: hidden;
+.sort_and_add {
+  display: flex;
 }
 
-@media only screen and (max-width: 680px) {
+@media only screen and (max-width: 780px) {
   select {
     height: 25px;
   }
