--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,11 +1,11 @@
 body {
-  max-width: 100%;
   margin: 0;
   padding: 0;
   font-family: sans-serif;
   background-color: #17141F;
 }
 
-.sort_and_add {
-  display: flex;
+div {
+  margin: 0;
+  padding: 0;
 }
